[package]
name = "function_polars"
version = "0.1.3"
edition = "2021"

[lib]
name = "function_polars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"]}
polars = {version = "0.44.2", features = ["lazy"] }
polars-core = { version = "0.44.2"}
pyo3-polars = { version = "0.18.0" }
serde = { version = "1.0", features = ["derive"] }